# muteq

./: .gitignore  CLAUDE.md  Makefile  README.md  cloudformation.yml  pyproject.toml  smoothing.md  update-pi.sh
dashboard/: server.py
dashboard/static/: dashboard.css  dashboard.js  index.html
lambda/: requirements.txt
lambda/ingest/: handler.py
lambda/query/: handler.py
sensor/: client_config-example.json  install.sh  requirements.txt  test_runner.py
sensor/app/: config_loader.py  db.py  html_generator.py  http_poster.py  main.py  mqtt_client.py  s3_uploader.py  server_client.py  smoothing.py  usb_reader.py
