[project]
name = "muteq"
version = "0.1.0"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    "__pycache__",
    ".ruff_cache",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long — ruff format handles this
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
